# quant

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: book_bench.cpp
docs/: architecture.html  architecture.md
docs/benchmarks/: orderbook_cache.md  receive_modes.md
src/common/: affinity.hpp  flat_hash_map.hpp  huge_alloc.hpp  pool_allocator.hpp  spsc_ring.hpp  timing.hpp  types.hpp  wire.hpp
src/exchange_sim/: generator.hpp  main.cpp  udp_sender.hpp
src/feed_handler/: receiver.hpp
src/matching_engine/: matcher.hpp
src/monitoring/: histogram.hpp  reporter.hpp
src/orderbook/: book.hpp  reference_book.hpp
src/pipeline/: main.cpp
tests/: flat_hash_map_test.cpp  histogram_test.cpp  matcher_test.cpp  orderbook_test.cpp  pool_test.cpp  receiver_test.cpp  spsc_ring_test.cpp
